# PromoAgent

./: .coverage  .env.example  .gitignore  .s2l-session.json  .source2launchrc.example  CHANGELOG.md  MIGRATION.md  OPTIMIZATION_SUMMARY.md  PROJECT_INTRO.md  README.md  package-lock.json  package.json  pyproject.toml
docs/: competitor-benchmark.md  generated-examples.md  image-optimization-guide.md  markdown.md  npm-publish.md  optimization-summary.md  promo-improvement-guide.md  promotion-benchmark.md  promotion-style-guide.md  prompt-presets.md  skills.md  source-pair-benchmark.md  xhs-launch.md
examples/: ai-report.txt  ci.md  local-report.txt  source-pairs.json
promoagent/: __init__.py  ai.py  analyzer.py  browser.py  cache.py  cli.py  examples.py  image.py  image_skills.py  interactive.py  logger.py  mcp_server.py  optimize.py  pipeline.py  platforms.py  promo_prompts.py  publish.py  render.py  render_xhs.py  setup_wizard.py  ui.py  web.py
scripts/: modelscope-image-edit.py  test-and-generate.sh
source2launch/: __init__.py  ai.py  analyzer.py  browser.py  campaign.py  cli.py  examples.py  image.py  interactive.py  markdown.py  optimize.py  promo_prompts.py  publish.py  server.py  skills.py  web.py
src/: agent.js  ai.js  cache.js  campaign.js  cli.js  config.js  gradio-image.js  image.js  index.js  launch.js  markdown.js  modelscope.js  optimize.js  pdf.js  project-brief.js  project-intro.js  project-summary.js  promo-brief.js  promo-image-compose.js  promo-image-overlay.js  promo-image-prompts.js  promo-prompts.js  promo-sanitize.js  promo-shared.js  promo.js  prompts.js  publish.js  readme.js  report.js  server.js  skills.js  template.js
templates/: README.md
test/: agent-tools.test.js  agent.test.js  analyzer.test.js  gradio-image.test.js  modelscope.test.js  optimize.test.js  pdf.test.js  project-brief.test.js  project-summary.test.js  promo-brief.test.js  promo-image-compose.test.js  (+5 more)
(+25 files in other folders)
