[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "source2launch"
version = "0.2.0"
description = "Generate source-grounded launch content for open-source projects and papers."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "DeLunnLi" }]
keywords = [
  "ai",
  "open-source",
  "paper",
  "launch",
  "promotion",
  "cli"
]
dependencies = []

[project.optional-dependencies]
web = ["gradio>=4.0"]

[project.scripts]
source2launch = "source2launch.cli:main"
source2launch-py = "source2launch.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["source2launch*"]

[tool.source2launch]
python_migration = true
