[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "promoagent"
version = "0.3.0"
description = "AI Promotion Agent for Launches, Ads, and Multi-Platform Copy"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "DeLunnLi" }]
keywords = [
  "ai",
  "promotion",
  "marketing",
  "launch",
  "copywriting",
  "social-media",
  "agent",
  "cli"
]
dependencies = ["rich>=13.0"]

[project.optional-dependencies]
web    = ["gradio>=4.0"]
fill   = ["playwright>=1.40"]
mcp    = ["mcp>=1.0"]
pdf    = ["pypdf>=4.0"]
ocr    = ["pypdf>=4.0", "pypdfium2>=4.0", "Pillow>=9.0", "pytesseract>=0.3"]

[project.scripts]
promoagent     = "promoagent.cli:main"
promoagent-py  = "promoagent.cli:main"
promoagent-mcp = "promoagent.mcp_server:main"

[project.urls]
Homepage = "https://github.com/DeLunnLi/PromoAgent"
Repository = "https://github.com/DeLunnLi/PromoAgent"

[tool.setuptools.packages.find]
where = ["."]
include = ["promoagent*"]

[tool.promoagent]
python_migration = true
